--- a/app/src/main/res/layout/detial.xml
+++ b/app/src/main/res/layout/detial.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,13 +14,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="Favorite"
+            android:text="Park Detial"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ListView
+            android:id="@+id/detialListView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/favoriteListView"
             android:layout_below="@+id/detial"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
