some client stuffs

--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="32dp"
             android:layout_toStartOf="@+id/setting"
             android:src="@drawable/sound"
-            app:srcCompat="@drawable/soung" />
+            app:srcCompat="@drawable/sound" />
 
         <Switch
             android:id="@+id/soundSwitch"
