--- a/app/src/main/res/layout/favorite.xml
+++ b/app/src/main/res/layout/favorite.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/detial"
+            android:id="@+id/detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/favoriteListView"
-            android:layout_below="@+id/detial"
+            android:layout_below="@+id/detail"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
