--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -24,7 +24,7 @@
             app:srcCompat="@drawable/home" />
 
         <ImageButton
-            android:id="@+id/detial"
+            android:id="@+id/detail"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
@@ -80,6 +80,6 @@
     <include
         android:id="@+id/include_aboutUs"
         android:visibility="visible"
-        layout="@layout/aboutus"/>
+        layout="@layout/about_us"/>
 
 </LinearLayout>
