--- a/app/src/main/res/layout/parking_detail.xml
+++ b/app/src/main/res/layout/parking_detail.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/detial"
+            android:id="@+id/detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -21,7 +21,7 @@
             android:id="@+id/detialListView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detial"
+            android:layout_below="@+id/detail"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
