--- a/app/src/main/res/layout/activity_parking_lot_details.xml
+++ b/app/src/main/res/layout/activity_parking_lot_details.xml
@@ -14,15 +14,18 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="Park Detial"
+            android:text="Park Details"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ListView
-            android:id="@+id/detialListView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail"
-            android:layout_centerHorizontal="true" />
+            android:id="@+id/lv_parkingLotDetails"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/detail" >
+
+        </ListView>
+
     </RelativeLayout>
 
 </LinearLayout>
