--- a/app/src/main/res/layout/favorite.xml
+++ b/app/src/main/res/layout/favorite.xml
@@ -19,7 +19,7 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/favoriteListView"
+            android:id="@+id/lv_favorite"
             android:layout_below="@+id/detail"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
