fixed some minor bugs

--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
+            android:layout_width="221dp"
+            android:layout_height="205dp"
             app:srcCompat="@drawable/parking" />
 
         <ImageButton
